Proofreading history.tex.

--- a/history.tex
+++ b/history.tex
@@ -56,7 +56,7 @@ sometimes avoiding directions that are not relevant in the context of inductive 
     \itemsep0em
     \item Understand the history of the term ``data science.''
     \item Recognize the major milestones in the history of data-driven sciences.
-    \item Identify important figures to the field of data-driven sciences.
+    \item Identify important figures in the field of data-driven sciences.
   \end{itemize}
 
   \boxsubtitle{Takeaways}
@@ -66,7 +66,7 @@ sometimes avoiding directions that are not relevant in the context of inductive 
     \item We have evolved both in terms of theory and application of data-driven sciences.
     \item There is no consensus on the definition of data science (including which fields
       it encompasses).
-    \item However, there is sufficient evidence to support data science as a new science.
+    \item However, there is sufficient evidence to support data science as a distinct science.
   \end{itemize}
 \end{mainbox}
 
@@ -75,8 +75,8 @@ sometimes avoiding directions that are not relevant in the context of inductive 
 
 \section{The term ``data science''}
 
-The term data science is recent and has been used to label rather different fields of
-study.  In the following, I emphasize the history of a few notable usage of the term.
+The term data science is relatively recent and has been used to label rather different fields of
+study.  In the following, I emphasize the history of a few notable usages of the term.
 
 \def\naurds{(0,0) circle (20mm)}
 \def\naurcs{(0:5mm) circle (15mm)}
@@ -157,7 +157,7 @@ Mining, 7:414–417, 2014. reprinting of 2001 article in ISI Review, Vol 69.}.
 He advocates the expansion of statistics beyond theory into technical areas, significantly
 changing statistics.  Thus, it warranted a new name.
 
-As a result, William Swain Cleveland II is credited to define data science as it is most
+As a result, William Swain Cleveland II is credited with defining data science as it is most
 used today. He is a highly influential figure in the fields of statistics, machine
 learning, data visualization, data analysis for multidisciplinary studies, and high
 performance computing for deep data analysis.
@@ -184,7 +184,7 @@ performance computing for deep data analysis.
 
 In his view, data science is the ``modern'' statistics, where it is enlarged by computer
 science methods and domain expertise.  An illustration of Cleveland's view of data science
-is shown in \cref{fig:cleveland}.  It is important to note that Cleveland never defined a
+is shown in \cref{fig:cleveland}.  It is important to note that Cleveland never defined an
 explicit list of computer science fields and business domains that should be included in
 the new discipline.  The main idea is that statistics should rely on computational methods
 and that the domain expertise should be considered in the analysis.
@@ -201,10 +201,10 @@ Most of the usages of the term in literature and in the media are either a rough
 reference to a set of data-driven techniques or a marketing strategy.  Naur
 (\cref{fig:naur}) and Cleveland (\cref{fig:cleveland}) are among the few that try to
 carefully define the term.  However, both of them do not see data science as an
-independent field of study, but an enlarged scope of an existing science.  I disagree;
-the social and economical demand for data-driven solutions led to an evolution in our
+independent field of study, but rather an enlarged scope of an existing science.  I disagree;
+the social and economic demand for data-driven solutions has led to an evolution in our
 understanding of the challenges we are facing.  As a result, we see many ``data
-scientist'' being hired and many ``data science degrees'' programs emerging.
+scientists'' being hired and many ``data science degree'' programs emerging.
 
 In \cref{chap:data}, I dare to provide a (yet another) definition for the term.  I
 argue that its object of study can be precisely established to support it as a new
@@ -214,11 +214,11 @@ science.
 
 \textcite{Kelleher2018}\footfullcite{Kelleher2018} provides an interesting timeline of data-driven methods and
 influential figures in the field.  I reproduce it here with some changes, including
-some omissions and additions.  On the subject of data analysis, I include some of the
+some omissions and additions.  On the subject of data analysis, I include some
 exceptional remarks
 from \textcite{Vapnik1999b}\footfullcite{Vapnik1999b}.
 
-I first address data handling --- which I include data sources, collection, organization,
+I first address data handling --- which includes data sources, collection, organization,
 storage, and transformation ---, and then data analysis and knowledge extraction.
 
 \subsection{Timeline of data handling}
@@ -256,21 +256,21 @@ didactic reasons.
 \subsubsection{Pre-digital age}
 
 We can consider the earliest records of data collection to be the notches on sticks and
-bones to keep tracking of passing of time.  The Lebombo bone, a baboon fibula with
-notches, is one of the earliest known mathematical object.  It was found in the Lebombo
+bones used to keep track of the passing of time.  The Lebombo bone, a baboon fibula with
+notches, is one of the earliest known mathematical objects.  It was found in the Lebombo
 Mountains located between South Africa and Eswatini.
 They estimate it is more
 than 40,000 years old. It is conjectured to be a tally stick, but its exact purpose is
-unknown. Its 29 notches suggests that may have been used as a lunar phase counter.
+unknown. Its 29 notches suggest that it may have been used as a lunar phase counter.
 However, since it is broken at one end, the 29 notches may or may not be the total
 number\footfullcite{Beaumont2013}.
 
 Another important milestone in the history of data collection is the record of
-demographic data.  One of first known census was conducted in 3,800 BC in the Babylonian
+demographic data.  One of the first known censuses was conducted in 3,800 BC in the Babylonian
 Empire.  It was ordered to assess the population and resources of
-his empire.  Records were stored on  clay  tiles\footfullcite{Grajalez2013}.
+his empire.  Records were stored on clay tiles\footfullcite{Grajalez2013}.
 
-Since the early forms of writing, humanity abilities to register events and data
+Since the early forms of writing, humanity's abilities to register events and data
 increased significantly.  The first known written records date back to around 3,500 BC, the
 Sumerian archaic (pre-cuneiform) writing.  This writing system was used to represent
 commodities using clay tokens and to record transactions\footfullcite{Ifrah1998}.
@@ -289,8 +289,8 @@ papyrus (3,000 BC), the Roman wax tablets (100 BC), the codex
 
 Besides those improvements in unstructured data storage, at least in the Western and
 Middle Eastern world, there are no significant advances in structured data collection
-until the \nth{19} century.  (A Eastern timeline research seems much hard to perform.
-Unfortunally, I left it out in this book.)
+until the \nth{19} century.  (An Eastern timeline research seems much harder to perform.
+Unfortunately, I left it out in this book.)
 
 I consider a major influential figure in the history of data
 collection to be Florence Nightingale (1820 -- 1910).  She was a passionate statistician
@@ -301,7 +301,7 @@ of sanitation.  She was also the first to use
 statistical graphics to present data in a way that was easy to understand.  She is
 credited with developing a form of the pie chart now known as the polar area
 diagram.  She also reformed healthcare in the United Kingdom and
-is considered the founder of modern nursing; where great part of the work was to collect
+is considered the founder of modern nursing; where a great part of the work was to collect
 data in a standardized way to quickly draw conclusions\footfullcite{Grajalez2013}.
 
 \subsubsection{Digital age}
@@ -309,7 +309,7 @@ data in a standardized way to quickly draw conclusions\footfullcite{Grajalez2013
 In the modern period, several devices were developed to store digital\footnote{Digital
 means the representation of information in (finite) discrete form.  The term comes from the Latin
 digitus, meaning finger, because it is the natural way to count using fingers.  Digital
-here do not mean electronic.}
+here does not mean electronic.}
 information.  One particular device that is important for data collection is the punched
 card.  It is a piece of stiff paper that contains digital information represented by the
 presence or absence of holes in predefined positions.  The information can be read by a
@@ -444,7 +444,7 @@ processing techniques arose.  The development of distributed computing framework
 Apache Hadoop and Apache Spark enabled the processing of massive amounts of data in a
 distributed manner.
 
-Douglass Read Cutting and Michael Cafarella, the developers of software Apache Hadoop,
+Douglass Read Cutting and Michael Cafarella, the developers of the software Apache Hadoop,
 proposed both the \gls{hdfs} and MapReduce, which are the
 cornerstones of the Hadoop framework, in 2006.  Hadoop's distributed storage and
 processing capabilities enabled organizations to handle and analyze massive volumes of
@@ -452,7 +452,7 @@ data.
 
 Currently, Google holds a patent for
 MapReduce\footfullcite{Dean2008}.
-However, their framework inherits from the architeture proposed in
+However, their framework inherits from the architecture proposed in
 \textcite{Hillis1985}\footfullcite{Hillis1985} thesis.
 MapReduce is not particularly novel, but its simplicity and scalability made it popular.
 
@@ -498,16 +498,16 @@ analysis ---, so not much has changed since the beginning of the \nth{20} centur
 \subsubsection{Summary statistics}
 
 The earliest known records of systematic data analysis date back to the first censuses.
-The term \emph{statistics} itself refer to the analysis of data \emph{about the state},
+The term \emph{statistics} itself refers to the analysis of data \emph{about the state},
 including demographics and economics.  That early (and simplest) form of statistical
 analysis is called \emph{summary statistics}, which consists of describing data in terms
-of its central tendencies (e.g. arithmetic mean) e variability (e.g. range).
+of its central tendencies (e.g., arithmetic mean) and variability (e.g., range).
 
 \subsubsection{Probability advent}
 
 However, after the \nth{17} century, the foundations of modern probability theory were
 laid out.  Important figures for developing that theory are Blaise Pascal (1623
--- 1662), Pierre de Fermat (1607 -- 1665), Christiaan Huygens (1629 -- 1695), and Jacob
+-- 1662), Pierre de Fermat (1601 -- 1665), Christiaan Huygens (1629 -- 1695), and Jacob
 Bernoulli (1655 -- 1705).
 
 The foundation methods brought to life the field of statistical inference. In the
@@ -516,7 +516,7 @@ following years, important results were achieved.
 \paragraph{Bayes' rule}
 
 Reverend Thomas Bayes (1701 -- 1761) was an English statistician, philosopher, and
-presbyterian minister.  He is known for formulating a specific case of the theorem that
+Presbyterian minister.  He is known for formulating a specific case of the theorem that
 bears his name: Bayes' theorem.  The theorem is used to calculate conditional
 probabilities using an algorithm (his Proposition 9, published in 1763) that uses evidence to calculate
 limits on an unknown parameter.
@@ -524,7 +524,7 @@ limits on an unknown parameter.
 The Bayes' rule is the foundation of learning from evidence, once it allows us to
 calculate the probability of an event based on prior knowledge of conditions that might be
 related to the event.  Classifiers based on Naïve Bayes --- the application of Bayes'
-theorem with strong independence assumptions between known variables --- is likely to have
+theorem with strong independence assumptions between known variables --- are likely to have
 been used since the second half of the eighteenth century.
 
 \paragraph{Gauss' method of least squares}
@@ -546,8 +546,8 @@ Another change in the way we analyze data was the development of data visualizat
 visualization is the graphical representation of information and data.
 
 William Playfair (1759 -- 1823) was a secret agent on behalf of Great Britain during its
-war with France in the 1790s.  He invented several types of diagram between 1780s and
-1800s, such as the line, area and bar chart of economic data, and the pie chart and circle
+war with France in the 1790s.  He invented several types of diagrams between the 1780s and
+1800s, such as the line, area, and bar chart of economic data, and the pie chart and circle
 graph to show proportions.
 
 \subsubsection{Learning from data}
@@ -567,23 +567,23 @@ that can learn from data with minimal human intervention.
 
 In the 1930s, Sir Ronald A. Fisher (1890 -- 1962), a British polymath, developed
 discriminant analysis\footnote{\url{https://digital.library.adelaide.edu.au/dspace/bitstream/2440/15227/1/138.pdf}},
-which was initially used find linear functions to solve the problem of separating two or
-more classes of objects\footnote{After, Rosenblatt's work, however, it was used to solve
+which was initially used to find linear functions to solve the problem of separating two or
+more classes of objects\footnote{After Rosenblatt's work, however, it was used to solve
 inductive inference (classification) as well.  For curiosity, Fisher's paper
 introduced the famous Iris data set.}.
 
-The method is based on the so called Fisher discriminant, which is a linear
+The method is based on the so-called Fisher discriminant, which is a linear
 combination of variables.  The method can be used not only for classification but also for
 dimensionality reduction.
 
 Tackling the problem of the importance of the variables for a particular task, Fisher's
-increased the understanding of the importance of feature selection in data analysis.
+work increased the understanding of the importance of feature selection in data analysis.
 
 % See \cref{sub:fisher} for more details about the technique.
 
 \paragraph{Shannon's information theory}
 
-The field --- that studies quantification, storage and communication of information ---, was
+The field --- that studies quantification, storage, and communication of information ---, was
 originally established by the works of Harry Nyquist (1889 -- 1976) and Ralph Hartley
 (1888 -- 1970) in the 1920s, and Claude Shannon (1916 -- 2001) in the 1940s.
 Information theory brought many important concepts to the field of data analysis, such as
@@ -603,7 +603,7 @@ In 1951, Evelyn Fix (1904 -- 1965) and Joseph L. Hodges Jr. (1922 -- 2000) wrote
 technical report entitled ``Discriminatory Analysis, Nonparametric Discrimination:
 Consistency Properties.''  In this paper, they proposed the k-nearest neighbors algorithm,
 which is a non-parametric method used for classification and regression.  The algorithm
-marks a shift from the traditional parametric methods --- and purely statistical ---
+marks a shift from traditional parametric methods --- and purely statistical ones ---
 to non-parametric methods.
 
 It also shows how intuitive models can be used to solve complex problems.  The k-nearest
@@ -629,8 +629,8 @@ to the field of artificial intelligence.
 % know that a multilayer perceptron can solve the XOR problem easily.
 
 A few years after, the book ``Perceptrons: an introduction to computational geometry'' by
-Marvin Minsky and Seymour Papert in 1969 draw attention to the limitations of the
-perceptron\footnote{Although the Rosenblatt was aware of the limitations of the perceptron
+Marvin Minsky and Seymour Papert in 1969 drew attention to the limitations of the
+perceptron\footnote{Although Rosenblatt was aware of the limitations of the perceptron
 and was probably working on solutions, he died in 1971.}. They showed that a single-layer
 perceptron was limited to linearly separable problems, a fact that led to a decline in the
 interest in neural networks.
@@ -644,26 +644,26 @@ network research.
 In 1966, \citeauthor{Hunt1966}'s book\footfullcite{Hunt1966} described a way to induce decision trees from
 data.  The algorithm is based on the concept of information entropy and is a precursor of
 the \citeauthor{Quinlan1986}'s ID3 algorithm\footfullcite{Quinlan1986} and its variations.
-These algorithm gave rise to the field of decision trees, which is a popular method for
+These algorithms gave rise to the field of decision trees, which is a popular method for
 classification and regression.
 
 Trees are intuitive models that can be easily interpreted by humans.  They are based on
-symbolic rules that can be used to explain its internal decision-making process.
+symbolic rules that can be used to explain their internal decision-making process.
 
 % See \cref{sub:tree} for more details about the technique.
 
 \paragraph{Empirical risk minimization principle}
 
-Although many learning machines where developed until the 1960s, they did not advanced
+Although many learning machines were developed until the 1960s, they did not advance
 significantly the understanding of the general problem of learning from data.  Between
-1960s and 1986 --- before the backpropagation algorithm was proposed ---, the field of practical
+the 1960s and 1986 --- before the backpropagation algorithm was proposed ---, the field of practical
 data analysis was basically stagnant.  The main reason for that was the lack of a
 theoretical framework to support the development of new learning machines.
 
 However, these years were not completely unfruitful.  As early as 1968, Vladimir Vapnik
 (born 1936)
-and Alexey Chervonenkis (1938 -- 2014) developed the foundamental concepts of VC entropy
-and VC dimension for the data classification problems.  As a result, a novel inductive
+and Alexey Chervonenkis (1938 -- 2014) developed the fundamental concepts of VC entropy
+and VC dimension for data classification problems.  As a result, a novel inductive
 principle was proposed: the \gls{erm} principle.
 This principle is the foundation of statistical learning theory.
 
@@ -678,12 +678,12 @@ In 1986, researchers developed independently a method to optimize coefficients o
 multi-layer neural
 network\footfullcite{LeCun1986,Rumelhart1986}.  The method is called backpropagation and
 is the foundation of the resurgence of neural networks.  The technique enabled the
-training of artificial networks that can solve non linearly separable problems.
+training of artificial networks that can solve nonlinearly separable problems.
 
 This rebirth of neural networks happened in a scenario very different from the 1960s.
 The availability of data and computational power fueled a new approach to the problem of
 learning from data.  The new approach preferred the use of simple algorithms and
-intuitive models over theoretical models, fueling areas such as bioinspired computing and
+intuitive models over theoretical models, fueling areas such as bio-inspired computing and
 evolutionary computation.
 
 \paragraph{Ensembles}
@@ -711,17 +711,17 @@ The resulting method led to practical and efficient learning machines.
 
 \paragraph{Deep learning revolution}
 
-Although the ideia of neural networks with multiple layers were around since the 1960s,
-only in the late 2000s the field of deep learning caught the attention of the scientific
+Although the idea of neural networks with multiple layers was around since the 1960s,
+only in the late 2000s did the field of deep learning catch the attention of the scientific
 community by achieving state-of-the-art results in computer vision and natural language
 processing.  Yoshua Bengio, Geoffrey
-Hinton and Yann LeCun are recognized for their for conceptual and engineering
+Hinton and Yann LeCun are recognized for their conceptual and engineering
 breakthroughs in the field, winning the 2018 Turing Award\footnote{\url{https://awards.acm.org/about/2018-turing}}.
 
 % \paragraph{Knowledge discovery in databases}
 %
-% 1990s, Fayyad, Piatesky-Shapiro, and Smyth.
-% Developed the KDD process, which is the foundation of data mining.
+% In the 1990s, Fayyad, Piatesky-Shapiro, and Smyth
+% developed the KDD process, which is the foundation of data mining.
 % Data mining is the process of discovering patterns in large data sets involving methods at
 % the intersection of machine learning, statistics, and database systems.
 
@@ -729,7 +729,7 @@ breakthroughs in the field, winning the 2018 Turing Award\footnote{\url{https://
 %
 % Nowadays, generative deep models are a hot topic in machine learning. They are a class of
 % statistical models that can generate new data instances. They are used in unsupervised
-% learning to discover hidden structures in unlabeled data (e.g. clustering), and in
+% learning to discover hidden structures in unlabeled data (e.g., clustering), and in
 % supervised learning to generate new synthetic data instances.  The most famous generative
 % models are the generative transformers and generative adversarial networks.
 
@@ -744,3 +744,4 @@ next step in the evolution of learning theory, calling it the ``complete statist
 theory of learning.''
 
 % vim: set spell spelllang=en:
+
