--- a/history.tex
+++ b/history.tex
@@ -256,7 +256,7 @@ didactic reasons.
 \subsubsection{Pre-digital age}
 
 We can consider the earliest records of data collection to be the notches on sticks and
-bones used to keep track of the passing of time.  The Lebombo bone, a baboon fibula with
+bones (probably) used to keep track of the passing of time.  The Lebombo bone, a baboon fibula with
 notches, is one of the earliest known mathematical objects.  It was found in the Lebombo
 Mountains located between South Africa and Eswatini.
 They estimate it is more
@@ -265,12 +265,12 @@ unknown. Its 29 notches suggest that it may have been used as a lunar phase coun
 However, since it is broken at one end, the 29 notches may or may not be the total
 number\footfullcite{Beaumont2013}.
 
-Another important milestone in the history of data collection is the record of
+Another milestone in the history of data collection is the record of
 demographic data.  One of the first known censuses was conducted in 3,800 BC in the Babylonian
 Empire.  It was ordered to assess the population and resources of
-his empire.  Records were stored on clay tiles\footfullcite{Grajalez2013}.
+the empire.  Records were stored on clay tiles\footfullcite{Grajalez2013}.
 
-Since the early forms of writing, humanity's abilities to register events and data
+Since the early forms of writing, humanity's abilities to register data and events
 increased significantly.  The first known written records date back to around 3,500 BC, the
 Sumerian archaic (pre-cuneiform) writing.  This writing system was used to represent
 commodities using clay tokens and to record transactions\footfullcite{Ifrah1998}.
@@ -709,7 +709,7 @@ theorem\footfullcite{Cover1965}, they developed a method that finds the optimal 
 that separates two classes of data in a high-dimensional space with the maximum margins.
 The resulting method led to practical and efficient learning machines.
 
-\paragraph{Deep learning revolution}
+\paragraph{Deep learning}
 
 Although the idea of neural networks with multiple layers was around since the 1960s,
 only in the late 2000s did the field of deep learning catch the attention of the scientific
