Fullciting some references.

--- a/project.tex
+++ b/project.tex
@@ -305,7 +305,7 @@ productive outcomes.
 Scrum organizes work into cycles called sprints, and involves defined roles, ceremonies,
 and artifacts that ensure the progress and quality of the product. Key events such as
 daily stand-ups, retrospectives, and sprint reviews create regular opportunities to inspect
-and adapt, making Scrum a responsive and resilient framework\nocite{denning2016scrum}.
+and adapt, making Scrum a responsive and resilient framework\footfullcite{denning2016scrum}.
 
 \subsection{Scrum roles}
 
@@ -319,7 +319,7 @@ objectives.
     maximizing the value of the work done by the team. The product owner manages the
     product backlog, ensuring that it is visible, transparent, and prioritized according
     to business needs. They serve as the main point of contact between stakeholders and
-    the development team\nocite{openagile2019roles}. The product owner must constantly
+    the development team\footfullcite{openagile2019roles}. The product owner must constantly
     balance the requirements of the business and the technical capabilities of the team,
     ensuring that the highest-value items are worked on first.
 
@@ -327,13 +327,13 @@ objectives.
     ensuring that the team adheres to the Scrum framework and agile principles. Unlike a
     traditional project manager, the Scrum master is not responsible for managing the team
     directly but for enabling them to perform optimally by removing impediments and
-    fostering a self-organizing culture\nocite{cobb2015scrum}.
+    fostering a self-organizing culture\footfullcite{cobb2015scrum}.
 
 \paragraph{Development team} It is a cross-functional group of professionals
     responsible for delivering potentially shippable product increments at the end of each
     sprint. The team is self-managing, meaning they decide how to achieve their goals
     within the sprint. The team is small enough to remain nimble but large enough
-    to complete meaningful work\nocite{rubin2012sprints}. The development team works
+    to complete meaningful work\footfullcite{rubin2012sprints}. The development team works
     collaboratively and takes collective responsibility for the outcome of the sprint.
 
 \subsection{Sprints and backlog}
